<resources>
    <string name="app_name">Ҳалқа</string>
    <string name="classic">Классик</string>
    <string name="night_mode">Тунги мавзу</string>
    <string name="test_title">Акром МАЛИК.</string>
    <string name="test_description">What is Lorem Ipsum?</string>
    <string name="test_story">Бугун Сенинг висолинг дардларимга малҳам бўлмас, \nҲолим сўрсанг, саволинг дардларимга малҳам бўлмас.\nҚандоқ ширин бахт эди мен ҳақимда хаёл сурсанг –\nБугун энди хаёлинг дардларимга малҳам бўлмас.</string>
    <string name="home">Бош саҳифа</string>
    <string name="audio_book">Aудио китоб</string>
    <string name="settings">Созламалар</string>
    <string name="color_theme">Дастур кўриниши</string>
    <string name="auto_night_mode">Aвтоматик тунги кўриниш</string>
    <string name="themes">Мавзулар</string>
    <string name="font_size">Матн ўлчами</string>
    <string name="change_to_night_mode">Тунги режимга ўтиш</string>
    <string name="change_to_light_mode">Кундузги режимга ўтиш</string>
    <string name="unknown_error">Кутилмаган хато</string>
    <string name="about_authors">Муаллиф ҳақида</string>
    <string name="about_app">Дастур ҳақида</string>
    <string name="name_of_the_book">Ҳалқа</string>
    <string name="name_of_the_author">Aкром Малик</string>
    <string name="description_of_the_book">“Halqa” qissasidagi voqealar oxirgi yuz yillikda bo‘lib o‘tadi. Qahramonlar qismati sizni goh Malayziya, goh Hind ummoni, goh Hind o‘lkasi, Afg‘on sahrolari, qadim Turkiston zamini, Bolqon yarimoroli va Uyg‘ur diyorlariga yetaklaydi. Iymon va kufr, mo‘min va shayton orasidagi kurash, zolimning halokati, mazlumning saodati haqida hikoya qiladi.﻿</string>
</resources>