<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="theme"
            type="uz.mahmudxon.halqa.util.theme.Theme" />

        <variable
            name="chapter"
            type="uz.mahmudxon.halqa.domain.model.Chapter" />


        <variable
            name="fontSize"
            type="Integer" />
    </data>

    <androidx.core.widget.NestedScrollView
        backgroundColor="@{theme.backgroundColor}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp"
            android:paddingBottom="30dp">

            <TextView
                textColor="@{theme.primaryTextColor}"
                textSize="@{(fontSize + 2)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@{chapter.title}"
                android:textAlignment="center"
                tools:text="@string/test_title" />


            <TextView
                textColor="@{theme.secondaryTextColor}"
                textSize="@{fontSize}"
                visibility="@{chapter.description.length() > 0}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{chapter.description}"
                android:textAlignment="center"
                tools:text="@string/test_description" />

            <TextView
                textColor="@{theme.primaryTextColor}"
                textSize="@{fontSize}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{chapter.story}"
                tools:text="@string/test_story" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>