<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="theme"
            type="uz.mahmudxon.halqa.util.theme.Theme" />

        <variable
            name="fontSize"
            type="Integer" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        backgroundColor="@{theme.backgroundColor}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            backgroundColor="@{theme.actionBarColor}"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center">


            <ImageView
                android:id="@+id/back_button"
                iconColor="@{theme.primaryTextColor}"
                android:layout_width="?actionBarSize"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:padding="16dp"
                android:src="@drawable/ic_back" />

            <TextView
                textColor="@{theme.primaryTextColor}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/about_app"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    cardBackColor="@{theme.cardColor}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:foreground="?selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerInside"
                            android:src="@drawable/halqa_in_the_street" />


                        <TextView
                            textColor="@{theme.primaryTextColor}"
                            textSize="@{fontSize}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/app_name"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            tools:textSize="16sp" />

                        <TextView
                            textColor="@{theme.secondaryTextColor}"
                            textSize="@{(fontSize-2)}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/name_of_the_author"
                            android:textAlignment="center"
                            tools:textSize="12sp" />

                        <TextView
                            textColor="@{theme.primaryTextColor}"
                            textSize="@{(fontSize-2)}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/description_of_the_book"
                            tools:textSize="14sp" />


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_links"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            tools:itemCount="1"
                            tools:listitem="@layout/item_social_media" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.core.widget.NestedScrollView>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>